@@ -4,7 +4,7 @@
 
 # @configure_input@
 
-revision='$Revision: 1.71 $'
+revision='$Revision: 1.72 $'
 version=`set - ${revision}; echo ${2}`
 version="R add-on package installer ${version}
 
@@ -261,7 +261,7 @@ do_install () {
 	    makefiles="-f Makevars ${makefiles}"
 	  fi
 	  ${MAKE} ${makefiles} \
-	    && cp *.@SHLIB_EXT@ ${lib}/${pkg}/libs \
+	    && cp *@SHLIB_EXT@ ${lib}/${pkg}/libs \
 	    || error=true; \
 	  if ${clean}; then
 	    ${MAKE} clean
@@ -271,12 +271,12 @@ do_install () {
         cd src;
           srcs=`ls *.[cfC] *.cc *.cpp 2>/dev/null`
 	  if test -n "${srcs}"; then
-	    sh ${R_HOME}/bin/SHLIB -o ${pkg}.@SHLIB_EXT@ ${srcs} \
-	      && cp *.@SHLIB_EXT@ ${lib}/${pkg}/libs \
+	    sh ${R_HOME}/bin/SHLIB -o ${pkg}@SHLIB_EXT@ ${srcs} \
+	      && cp *@SHLIB_EXT@ ${lib}/${pkg}/libs \
   	      || error=true; \
 	    if ${clean}; then
 	      rm -rf .libs _libs
-	      rm -f *.o *.@SHLIB_EXT@
+	      rm -f *.o *@SHLIB_EXT@
 	    fi
 	  else
 	    echo "WARNING: no source files found"
