@@ -4,7 +4,7 @@
 
 # @configure_input@
 
-revision='$Revision: 1.22 $'
+revision='$Revision: 1.23 $'
 version=`set - ${revision}; echo ${2}`
 version="R shared library builder ${version}
 
@@ -47,20 +47,20 @@ while test -n "${1}"; do
     *.cc|*.cpp|.*C)
       with_cxx=true
       if test -z "${shlib}"; then
-	shlib="`echo ${1} | sed 's/\.[^\.][^\.]*$/.@SHLIB_EXT@/'`"
+	shlib="`echo ${1} | sed 's/\.[^\.][^\.]*$/@SHLIB_EXT@/'`"
       fi
       objs="${objs} `echo ${1} | sed 's/\.[^\.][^\.]*$/.o/'`"
       ;;
     *.f)
       with_f77=true
       if test -z "${shlib}"; then
-	shlib="`echo ${1} | sed 's/\.[^\.][^\.]*$/.@SHLIB_EXT@/'`"
+	shlib="`echo ${1} | sed 's/\.[^\.][^\.]*$/@SHLIB_EXT@/'`"
       fi
       objs="${objs} `echo ${1} | sed 's/\.[^\.][^\.]*$/.o/'`"
       ;;
     *.[co])
       if test -z "${shlib}"; then
-	shlib="`echo ${1} | sed 's/\.[^\.][^\.]*$/.@SHLIB_EXT@/'`"
+	shlib="`echo ${1} | sed 's/\.[^\.][^\.]*$/@SHLIB_EXT@/'`"
       fi
       objs="${objs} `echo ${1} | sed 's/\.[^\.][^\.]*$/.o/'`"
       ;;
@@ -89,7 +89,7 @@ if ${with_f77}; then
   fi
 fi
 
-if test -f ${R_HOME}/bin/libR.@SHLIB_EXT@; then
+if test -f ${R_HOME}/bin/libR@SHLIB_EXT@; then
   LIBR="-L${R_HOME}/bin -lR"
 else
   LIBR=
